# python-tmx

./: .gitignore  README.md  a.py  pyproject.toml  readthedocs.yaml  ruff.toml  tmx14.dtd
.github/workflows/: python-publish.yml
docs/: Doc_Template.mustache  reqs.txt
docs/source/: PythonTmx.Intro.rst  PythonTmx.classes.rst  PythonTmx.inline.rst  PythonTmx.rst  PythonTmx.structural.rst  PythonTmx.utils.rst  conf.py  index.rst
src/PythonTmx/: __init__.py  classes.py  inline.py  structural.py  utils.py
src/python-tmx/: core.py  parse.py
src/python_tmx/: core.py  errors.py  export.py  io.py  parse.py
src/testpythontmx/: core.py  errors.py  export.py  io.py  parse.py
src/tests/: test_header.py  test_map.py  test_note.py  test_prop.py  test_structural.py  test_tmx.py  test_tu.py  test_tuv.py  test_ude.py
src/tmx/: __init__.py  constants.py  inline.py  loaders.py  structural.py
tests/: test_Header.py  test_Map.py  test_Note.py  test_Prop.py  test_Ude.py  test_header.py  test_loaders.py  test_map.py  test_note.py  test_prop.py  test_tmx.py  test_tu.py  test_tuv.py  test_ude.py
