[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "testpythontmx"
version = "0.7"
authors = [{ name = "Enzo Agosta", email = "agosta.enzowork@gmail.com" }]
maintainers = [{ name = "Enzo Agosta", email = "agosta.enzowork@gmail.com" }]
description = "Python library for manipulating, creating and editing tmx files"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["tmx", "translation", "translation memory"]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha"
]
dependencies = ["lxml>=5.3.0", "pydantic>=2.9.2"]

[project.urls]
Homepage = "https://github.com/ChonkyYoshi/python-tmx"
Repository = "https://github.com/ChonkyYoshi/python-tmx"
Issues = "https://github.com/ChonkyYoshi/python-tmx/issues"

[tool.ruff]
target-version = "py312"